--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h2 class="section-label">Games Created</h2>
             <div class="projects-grid">
                 
-                <a href="" target="_blank" class="project-card">
+                <a href="https://github.com/MAYKOOOOL/SORT-IT-OUT-" target="_blank" class="project-card">
                     <div class="card-image" style="background-image: url('Caps.png');"></div>
                     <div class="card-details">
                         <span class="project-title">SORT IT OUT!</span>
@@ -43,7 +43,7 @@
                     </div>
                 </a>
 
-                <a href="" target="_blank" class="project-card">
+                <a href="https://github.com/MAYKOOOOL/Mendville" target="_blank" class="project-card">
                     <div class="card-image" style="background-image: url('kanos.PNG');"></div>
                     <div class="card-details">
                         <span class="project-title">Mendville</span>
@@ -53,7 +53,7 @@
                     </div>
                 </a>
 
-                <a href="" target="_blank" class="project-card">
+                <a href="https://github.com/DamiaStudios0101/Saldang-The-Lost-Soul-of-Bicol" target="_blank" class="project-card">
                     <div class="card-image" style="background-image: url('Screenshot\ \(52\).png');"></div>
                     <div class="card-details">
                         <span class="project-title">SALDANG: The Lost Soul of Bicol</span>
@@ -63,7 +63,7 @@
                     </div>
                 </a>
 
-                <a href="" target="_blank" class="project-card">
+                <a href="https://github.com/MAYKOOOOL/Mr.Kupido" target="_blank" class="project-card">
                     <div class="card-image" style="background-image: url('kupido2.png');"></div>
                     <div class="card-details">
                         <span class="project-title">MR. KUPIDO</span>
@@ -73,7 +73,7 @@
                     </div>
                 </a>
 
-                <a href="" target="_blank" class="project-card">
+                <a href="https://github.com/DamiaStudios0101/Airstrike-Pursuit" target="_blank" class="project-card">
                     <div class="card-image" style="background-image: url('Screenshot\ \(45\).png');"></div>
                     <div class="card-details">
                         <span class="project-title">AIRSTRIKE PURSUIT</span>
@@ -83,7 +83,7 @@
                     </div>
                 </a>
 
-                <a href="" target="_blank" class="project-card">
+                <a href="https://github.com/DamiaStudios0101/Abyss-Raider" target="_blank" class="project-card">
                     <div class="card-image" style="background-image: url('Screenshot\ \(47\).png');"></div>
                     <div class="card-details">
                         <span class="project-title">ABYSS RAIDER</span>
@@ -93,7 +93,7 @@
                     </div>
                 </a>
 
-                <a href="" target="_blank" class="project-card">
+                <a href="https://github.com/DamiaStudios0101/Flagged-and-Fragged" target="_blank" class="project-card">
                     <div class="card-image" style="background-image: url('Screenshot\ \(48\).png');"></div>
                     <div class="card-details">
                         <span class="project-title">FLAGGED & FRAGGED</span>
@@ -103,7 +103,7 @@
                     </div>
                 </a>
 
-                <a href="" target="_blank" class="project-card">
+                <a href="https://github.com/DamiaStudios0101/SWINGJA-" target="_blank" class="project-card">
                     <div class="card-image" style="background-image: url('SWINGJA!\ TITLE.png');"></div>
                     <div class="card-details">
                         <span class="project-title">SWINGJA!</span>
