Mobile Version Layout Update

--- a/index.html
+++ b/index.html
@@ -33,23 +33,29 @@
                 <p class="achievements-list">SALDANG: The Lost Soul of Bicol - 2nd Place at Mythic Bicol Game Jam 2025</p>
                 <p class="achievements-list">MR. KUPIDO - Top 19 Semi-finalist in YCC2 National Competition.</p>
 
-            <h1 class="profile-gamedevtools ">🎮Game Development Tools</h1>
-            <p class="list"><img src="unity.png" class="icon">Unity Engine</p>
-            <p class="list"><img src="photoshop.png" class="icon">Adobe Photoshop</p>
-            <p class="list"><img src="animate.png" class="icon">Adobe Animate</p>
-            <p class="list"><img src="after.png" class="icon">Adobe After Effects</p>
-            <p class="list"><img src="maya.png" class="icon">Maya</p>
-            <p class="list"><img src="blender.png" class="icon">Blender</p>
-            <p class="list"><img src="github.png" class="icon">Github</p>
-            <p class="list"><img src="C++.png" class="icon">C++</p>
-            <p class="list"><img src="Csharp.png" class="icon">C#</p>
-
-            <h1 class="profile-webtools">🌐Web Development Tools</h1>
-            <p class="list"><img src="VScode.png" class="icon">Visual Studio Code</p>
-            <p class="list"><img src="Html.png" class="icon">HTML5</p>
-            <p class="list"><img src="jscript.png" class="icon">Javascript</p>
-            <p class="list"><img src="css3.png" class="icon">CSS</p>
-            <p class="list"><img src="github.png" class="icon">Github</p>
+                <div class="tools-wrapper">
+                    <div class="tools-section">
+                        <h1 class="profile-gamedevtools">🎮 Game Development Tools</h1>
+                        <p class="list"><img src="unity.png" class="icon">Unity Engine</p>
+                        <p class="list"><img src="photoshop.png" class="icon">Adobe Photoshop</p>
+                        <p class="list"><img src="animate.png" class="icon">Adobe Animate</p>
+                        <p class="list"><img src="after.png" class="icon">Adobe After Effects</p>
+                        <p class="list"><img src="maya.png" class="icon">Maya</p>
+                        <p class="list"><img src="blender.png" class="icon">Blender</p>
+                        <p class="list"><img src="github.png" class="icon">Github</p>
+                        <p class="list"><img src="C++.png" class="icon">C++</p>
+                        <p class="list"><img src="Csharp.png" class="icon">C#</p>
+                    </div>
+                
+                    <div class="tools-section">
+                        <h1 class="profile-webtools">🌐 Web Development Tools</h1>
+                        <p class="list"><img src="VScode.png" class="icon">Visual Studio Code</p>
+                        <p class="list"><img src="Html.png" class="icon">HTML5</p>
+                        <p class="list"><img src="jscript.png" class="icon">JavaScript</p>
+                        <p class="list"><img src="css3.png" class="icon">CSS</p>
+                        <p class="list"><img src="github.png" class="icon">Github</p>
+                    </div>
+                </div>
             
         </aside>
 
