--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <div class="card-image">
                         <img src="kanos.PNG" class="card-thumb" alt="MENDVILLE">
                         <video class="card-video" muted loop preload="metadata">
-                            <source src="SwingJa.mp4" type="video/mp4">
+                            <source src="Mendville.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="card-details">
